src/test/resources/SemanticAnalysis/negative/SameAttribute.ls
class A {

  syn a : int;
  inh a : int;

  p ("") {}

}
